# ctx

./: .gitignore  CHANGELOG.md  PRODUCTIZATION_SUMMARY.md  QUICK_START_RELEASE.md  README.md  RELEASING.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
docs/: CNAME  index.html
scripts/: create-dmg.sh  notarize.sh
src/: index.css
src-tauri/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  process_manager.rs
src-tauri/src/commands/: live_sessions.rs  mod.rs  projects.rs  sessions.rs
src-tauri/src/models/: mod.rs  project.rs  session.rs
src-tauri/src/parsers/: mod.rs  session_parser.rs
src-tauri/src/watchers/: mod.rs  session_watcher.rs
src/components/layout/: LeftSidebar.tsx  MainLayout.tsx  RightSidebar.tsx
src/components/notifications/: NotificationCenter.tsx
src/components/projects/: ProjectList.tsx
src/components/sessions/: SessionPanel.tsx
src/components/settings/: SettingsPanel.tsx
src/components/threads/: ThreadList.tsx
src/components/visualization/: HubNode.tsx  LiveSessionNode.tsx  NeuralCanvas.tsx  ProjectNode.tsx  Synapse.tsx  ThreadNode.tsx
src/hooks/: useNotifications.ts
src/services/: tauriService.ts
src/stores/: useLiveSessionStore.ts  useNotificationStore.ts  useProjectStore.ts  useThreadStore.ts
